rank query added

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Creation-of-Database\" data-toc-modified-id=\"Creation-of-Database-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Creation of Database</a></span></li><li><span><a href=\"#Creations-of-the-tables\" data-toc-modified-id=\"Creations-of-the-tables-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Creations of the tables</a></span><ul class=\"toc-item\"><li><span><a href=\"#Table-structure\" data-toc-modified-id=\"Table-structure-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Table structure</a></span></li><li><span><a href=\"#Table-basics\" data-toc-modified-id=\"Table-basics-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Table basics</a></span></li><li><span><a href=\"#table-ratings\" data-toc-modified-id=\"table-ratings-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>table ratings</a></span></li><li><span><a href=\"#Inserting-the-data\" data-toc-modified-id=\"Inserting-the-data-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Inserting the data</a></span></li></ul></li><li><span><a href=\"#Playing-with-queries\" data-toc-modified-id=\"Playing-with-queries-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Playing with queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#Function-to-ask-the-queries\" data-toc-modified-id=\"Function-to-ask-the-queries-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Function to ask the queries</a></span></li><li><span><a href=\"#Simple-queries\" data-toc-modified-id=\"Simple-queries-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Simple queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#How-many-different-genre-combinations-are-there\" data-toc-modified-id=\"How-many-different-genre-combinations-are-there-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>How many different genre combinations are there</a></span></li><li><span><a href=\"#What-percentage-of-movies-is-for-adults\" data-toc-modified-id=\"What-percentage-of-movies-is-for-adults-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>What percentage of movies is for adults</a></span></li><li><span><a href=\"#Statistics-about-duration\" data-toc-modified-id=\"Statistics-about-duration-3.2.3\"><span class=\"toc-item-num\">3.2.3&nbsp;&nbsp;</span>Statistics about duration</a></span></li><li><span><a href=\"#Which-entry-is-this-damn-longest-movie?\" data-toc-modified-id=\"Which-entry-is-this-damn-longest-movie?-3.2.4\"><span class=\"toc-item-num\">3.2.4&nbsp;&nbsp;</span>Which entry is this damn longest movie?</a></span></li></ul></li><li><span><a href=\"#More-complex-queries\" data-toc-modified-id=\"More-complex-queries-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>More complex queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#Average-score-notation-per-century\" data-toc-modified-id=\"Average-score-notation-per-century-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Average score notation per century</a></span></li><li><span><a href=\"#Shortest-and-longest-entry-duration-per-year-in-this-century-(+pandas)\" data-toc-modified-id=\"Shortest-and-longest-entry-duration-per-year-in-this-century-(+pandas)-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Shortest and longest entry duration per year in this century (+pandas)</a></span></li></ul></li><li><span><a href=\"#Random-queries-for-tests\" data-toc-modified-id=\"Random-queries-for-tests-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Random queries for tests</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Creation-of-Database\" data-toc-modified-id=\"Creation-of-Database-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Creation of Database</a></span></li><li><span><a href=\"#Creations-of-the-tables\" data-toc-modified-id=\"Creations-of-the-tables-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Creations of the tables</a></span><ul class=\"toc-item\"><li><span><a href=\"#Table-structure\" data-toc-modified-id=\"Table-structure-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Table structure</a></span></li><li><span><a href=\"#Table-basics\" data-toc-modified-id=\"Table-basics-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Table basics</a></span></li><li><span><a href=\"#table-ratings\" data-toc-modified-id=\"table-ratings-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>table ratings</a></span></li><li><span><a href=\"#Inserting-the-data\" data-toc-modified-id=\"Inserting-the-data-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Inserting the data</a></span></li></ul></li><li><span><a href=\"#Playing-with-queries\" data-toc-modified-id=\"Playing-with-queries-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Playing with queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#Function-to-ask-the-queries\" data-toc-modified-id=\"Function-to-ask-the-queries-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Function to ask the queries</a></span></li><li><span><a href=\"#Simple-queries\" data-toc-modified-id=\"Simple-queries-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Simple queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#How-many-different-genre-combinations-are-there\" data-toc-modified-id=\"How-many-different-genre-combinations-are-there-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>How many different genre combinations are there</a></span></li><li><span><a href=\"#What-percentage-of-movies-is-for-adults\" data-toc-modified-id=\"What-percentage-of-movies-is-for-adults-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>What percentage of movies is for adults</a></span></li><li><span><a href=\"#Statistics-about-duration\" data-toc-modified-id=\"Statistics-about-duration-3.2.3\"><span class=\"toc-item-num\">3.2.3&nbsp;&nbsp;</span>Statistics about duration</a></span></li><li><span><a href=\"#Which-entry-is-this-damn-longest-movie?\" data-toc-modified-id=\"Which-entry-is-this-damn-longest-movie?-3.2.4\"><span class=\"toc-item-num\">3.2.4&nbsp;&nbsp;</span>Which entry is this damn longest movie?</a></span></li></ul></li><li><span><a href=\"#More-complex-queries\" data-toc-modified-id=\"More-complex-queries-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>More complex queries</a></span><ul class=\"toc-item\"><li><span><a href=\"#Average-score-notation-per-century\" data-toc-modified-id=\"Average-score-notation-per-century-3.3.1\"><span class=\"toc-item-num\">3.3.1&nbsp;&nbsp;</span>Average score notation per century</a></span></li><li><span><a href=\"#Shortest-and-longest-entry-duration-per-year-in-this-century-(+pandas)\" data-toc-modified-id=\"Shortest-and-longest-entry-duration-per-year-in-this-century-(+pandas)-3.3.2\"><span class=\"toc-item-num\">3.3.2&nbsp;&nbsp;</span>Shortest and longest entry duration per year in this century (+pandas)</a></span></li><li><span><a href=\"#Ranking-of-movies-from-1982\" data-toc-modified-id=\"Ranking-of-movies-from-1982-3.3.3\"><span class=\"toc-item-num\">3.3.3&nbsp;&nbsp;</span>Ranking of movies from 1982</a></span></li></ul></li><li><span><a href=\"#Random-queries-for-tests\" data-toc-modified-id=\"Random-queries-for-tests-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Random queries for tests</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -817,8 +817,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
+   "execution_count": 115,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1041,6 +1043,184 @@
     "    except Exception as err:\n",
     "        print(f\"The following error was raised:\\n{err}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ranking of movies from 1982"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Part II</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Ludwig Stossel Show</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Part I</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>An Evening with Max Wall</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Two Traditions</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>The Orson Welles Story - Part 2</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Up and Down the Dial</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>The Moral Dimension</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Episode dated 1 December 1982</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Episode #1.247</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              title  rating  rank\n",
+       "0                           Part II     9.9     1\n",
+       "1           The Ludwig Stossel Show     9.9     1\n",
+       "2                            Part I     9.9     1\n",
+       "3          An Evening with Max Wall     9.8     4\n",
+       "4                The Two Traditions     9.7     5\n",
+       "..                              ...     ...   ...\n",
+       "95  The Orson Welles Story - Part 2     8.9    88\n",
+       "96             Up and Down the Dial     8.9    88\n",
+       "97              The Moral Dimension     8.9    88\n",
+       "98    Episode dated 1 December 1982     8.9    88\n",
+       "99                   Episode #1.247     8.9    88\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#intermediate query used to test my window\n",
+    "old = \"\"\"SELECT\n",
+    "    originalTitle Title, ROUND(AVG(averageRating),2) Rating\n",
+    "FROM basics\n",
+    "JOIN ratings ON basics.tconst = ratings.tconst\n",
+    "WHERE startYear = 1982\n",
+    "GROUP BY basics.tconst\n",
+    "ORDER BY Rating desc\n",
+    "LIMIT 30\"\"\" \n",
+    "query = \"\"\"         \n",
+    "WITH ratedeightytwomvies AS (\n",
+    "SELECT\n",
+    "    originalTitle Title, ROUND(AVG(averageRating),2) Rating\n",
+    "FROM basics\n",
+    "JOIN ratings ON basics.tconst = ratings.tconst\n",
+    "WHERE startYear = 1982\n",
+    "GROUP BY basics.tconst\n",
+    "ORDER BY Rating desc\n",
+    ")\n",
+    "\n",
+    "SELECT Title, Rating,\n",
+    "RANK () OVER (\n",
+    "ORDER BY Rating DESC\n",
+    ") rank\n",
+    "\n",
+    "FROM ratedeightytwomvies\n",
+    "LIMIT 100\n",
+    "\"\"\"\n",
+    "\n",
+    "with MyDB() as my_db:\n",
+    "    try:\n",
+    "        df_1982_ratings = pd.read_sql_query(query, my_db._db_connection)\n",
+    "        display(df_1982_ratings)\n",
+    "    except Exception as err:\n",
+    "        print(f\"The following error was raised:\\n{err}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
