--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,20 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "ename": "ActiveSqlTransaction",
-     "evalue": "CREATE DATABASE cannot run inside a transaction block\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mActiveSqlTransaction\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-fa271299f886>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#Creating a database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Database created successfully........\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mActiveSqlTransaction\u001b[0m: CREATE DATABASE cannot run inside a transaction block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following error was raised:\n",
+      "database \"imdb\" already exists\n",
+      "\n"
      ]
     }
    ],
@@ -119,8 +117,11 @@
     "sql = '''CREATE database imdb''';\n",
     "\n",
     "#Creating a database\n",
-    "cursor.execute(sql)\n",
-    "print(\"Database created successfully........\")\n",
+    "try:\n",
+    "    cursor.execute(sql)\n",
+    "    print(\"Database created successfully........\")\n",
+    "except Exception as err:\n",
+    "        print(f\"The following error was raised:\\n{err}\")\n",
     "\n",
     "#Closing the connection\n",
     "conn.close()"
@@ -196,20 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "DuplicateTable",
-     "evalue": "relation \"basics\" already exists\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDuplicateTable\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-763cb43c6e14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m#Creating a database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDuplicateTable\u001b[0m: relation \"basics\" already exists\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following error was raised:\n",
+      "relation \"basics\" already exists\n",
+      "\n"
      ]
     }
    ],
@@ -238,11 +235,15 @@
     "        ''';\n",
     "\n",
     "#Creating a database\n",
-    "cursor.execute(sql)\n",
+    "try:\n",
+    "    cursor.execute(sql)\n",
     "\n",
-    "conn.commit()\n",
-    "print(\"Table created successfully........\")\n",
+    "    conn.commit()\n",
+    "    print(\"Table created successfully........\")\n",
     "\n",
+    "except Exception as err:\n",
+    "        print(f\"The following error was raised:\\n{err}\")\n",
+    "    \n",
     "#Closing the connection\n",
     "conn.close()"
    ]
